# predator-prey

./: .gitignore  .travis.yml  Dockerfile  ModelLaunchExample.ipynb  README.md  Vagrantfile  bootstrap.sh  build.sh  ppenv.yml  setup_development_env.md  Миньяр-Белоручева_АП__Англо-русские_обороты_научной_речи.djvu  Михельсон_ТН__Успенская_НВ__Как_писать_по-английски_научные_статьи_рефераты_и_рецензии.doc
notebooks/: AgentsToSteps.ipynb  DynamicLifeModel.ipynb  Experiment.ipynb  Experiment2.ipynb  Experiment3.ipynb  Experiment4.ipynb  Experiment6.ipynb  Experiment_1.ipynb  Experiment_2.ipynb  Experiment_3.ipynb  Experiment_4.ipynb  Experiment_4_1.ipynb  Experiment_4_2.ipynb  Experiment_5.ipynb  Experiment_6.ipynb  Expetiment_6.ipynb  Expirement5.ipynb  LifeModel.ipynb  ModelLaunchExample.ipynb  README.md  SeedToSteps.ipynb  SeedToSteps2.ipynb  SpaceToAgent.ipynb  Untitled.ipynb  nbconv.sh  ppmodel.py  results_e1.csv  results_e2.csv  results_e3.csv  results_e3_1.csv  results_e4.csv  results_e4_1.csv  results_e4_2.csv
report/: Report.tex  configfile  doxygen_sqlite3.db
report/pictures/: Untitled.mdj  Untitled1.mdj
review/: 1_Arch_review.md  Demo_2.md  demo_4_notes.md  demo_notes.md
sources/Predator-prey/: CMakeLists.txt  Predator-prey.pro
sources/Predator-prey/CLI/: CLI.pro  CMakeLists.txt  cli.cpp  cli.h  logging.cpp  logging.h  main.cpp
sources/Predator-prey/GUIApp/: CMakeLists.txt  GUIApp.pro  exitwindow.cpp  exitwindow.h  fieldframe.cpp  fieldframe.h  main.cpp  mainmenu.cpp  mainmenu.h  modelgui.cpp  modelgui.h  modelwindow.cpp  modelwindow.h  resources.qrc  resultwindow.cpp  resultwindow.h  seedwindow.cpp  seedwindow.h  settingswindow.cpp  settingswindow.h  statusframe.cpp  statusframe.h
sources/Predator-prey/GUIApp/resources/: resources.qrc
sources/Predator-prey/app/: app.pro  consoleDialog.cpp  consoleDialog.h  main.cpp
sources/Predator-prey/consoleApp/: CMakeLists.txt  badinput.h  consoleApp.pro  consoleDialog.cpp  consoleDialog.h  consoleapp.cpp  consoleapp.h  consoledialog.cpp  consoledialog.h  consoledrawer.cpp  consoledrawer.h  main.cpp
sources/Predator-prey/gui/: gui.pro  main.cpp  mainmenu.cpp  mainmenu.h
sources/Predator-prey/lib/: CMakeLists.txt  animal.cpp  animal.h  badboundary.h  badfield.h  badinput.h  badnum.h  brain.cpp  brain.h  constants.h  coordinates.cpp  coordinates.h  exceptions.h  field.cpp  field.h  grass.cpp  grass.h  lib.pro  model.cpp  model.h  modelapi.cpp  modelapi.h  modelpp.cpp  modelpp.h  movement.cpp  movement.h  point.cpp  point.h  predator.cpp  predator.h  predatorsbrain.cpp  predatorsbrain.h  prey.cpp  prey.h  preysbrain.cpp  preysbrain.h  sense.cpp  sense.h  settings.cpp  settings.h  (+4 more)
sources/Predator-prey/tests/: CMakeLists.txt  tests.pro  tst_modeltest.cpp  tst_movementtest.cpp  tst_predatortest.cpp
